# Amethyst-iOS-Patch

./: .gitmodules  Makefile  dummy.java
.github/workflows/: development.yml  ios-build.yml  release.yml
JavaApp/: Makefile
JavaApp/src/launcher/net/kdt/pojavlaunch/: PojavLauncher.java  Tools.java
JavaApp/src/launcher/net/kdt/pojavlaunch/render/: MetalCraftBridge.java  MetalCraftGLInterceptor.java
JavaApp/src/launcher/net/kdt/pojavlaunch/utils/: MCOptionUtils.java
JavaApp/src/lwjgl/org/lwjgl/glfw/: GLFW.java
JavaApp/src/lwjgl/org/lwjgl/opengl/: ARBMultiDrawIndirect.java  GL11.java  GL14.java  GL20.java  GL30.java  GL31.java  GL32.java  GL43.java  MetalCraftOpenGLHooks.java
JavaApp/src/patchjna_agent/com/sun/jna/: Platform.java
JavaApp/src/runtime_patches/sun/nio/ch/: FileLockTable.java
NG-GL4ES-main/: CMakeLists.txt
NG-GL4ES-main/include/GL/: glext.h
NG-GL4ES-main/src/gl/: directstate.c  enable.c  framebuffers.c  gles.h  loader.h  shader.c  string_utils.c  texture.c  texture.h  texture_3d.c  texture_params.c
NG-GL4ES-main/src/glx/: hardext.c
Natives/: CMakeLists.txt  JavaLauncher.m  LauncherNavigationController.m  LauncherPreferences.m  MinecraftResourceDownloadTask.h  MinecraftResourceDownloadTask.m  PickTextField.m  SurfaceViewController.m  UIKit+hook.h  egl_bridge.m  utils.h
Natives/authenticator/: BaseAuthenticator.h  BaseAuthenticator.m  LocalAuthenticator.m  MinecraftAccountJNI.m
Natives/ctxbridges/: bridge_tbl.h  gl_bridge.h  gl_bridge.m  osm_bridge.m
Natives/renderer/: CMakeLists.txt
Natives/renderer/include/metalcraft/: IBuffer.h  IRenderDevice.h  ITexture.h  IndirectCommandStream.h  JNIBridge.h  MetalCommandEncoder.h  RenderTypes.h  RingBuffer.h  ShaderTranslator.h  StateTracker.h
Natives/renderer/src/: IndirectCommandStream.cpp  JNIBridge.cpp  RenderDeviceFactory.cpp  RingBuffer.cpp  ShaderTranslator.cpp  StateTracker.cpp
Natives/renderer/src/apple/: MetalBuffer.mm  MetalCommandEncoder.mm  MetalDepthStencilManager.mm  MetalDevice.mm  MetalPipelineManager.mm  MetalTexture.mm
Natives/renderer/src/linux/: DummyBackend.h  DummyBuffer.cpp  DummyDevice.cpp  DummyTexture.cpp
Natives/renderer/tests/: MetalCraftTests.cpp
Natives/resources/en.lproj/: Localizable.strings
Natives/resources/vi.lproj/: Localizable.strings
scripts/ci/: apply_external_patches.sh  restore_external_dependencies.sh  run_renderer_smoke_tests.sh
sodium-dev/buildSrc/src/main/kotlin/: multiloader-platform.gradle.kts
sodium-dev/common/src/api/java/net/caffeinemc/mods/sodium/api/config/: ConfigEntryPoint.java  ConfigEntryPointForge.java  StorageEventHandler.java
sodium-dev/common/src/api/java/net/caffeinemc/mods/sodium/api/config/option/: ControlValueFormatter.java  NameProvider.java  OptionBinding.java  OptionImpact.java
sodium-dev/common/src/api/java/net/caffeinemc/mods/sodium/api/config/structure/: ColorThemeBuilder.java  ConfigBuilder.java  ExternalPageBuilder.java  OptionBuilder.java  OptionGroupBuilder.java  OptionPageBuilder.java  PageBuilder.java
sodium-dev/common/src/api/java/net/caffeinemc/mods/sodium/api/math/: MatrixHelper.java
sodium-dev/common/src/api/java/net/caffeinemc/mods/sodium/api/texture/: SpriteUtil.java
sodium-dev/common/src/api/java/net/caffeinemc/mods/sodium/api/vertex/buffer/: VertexBufferWriter.java
sodium-dev/common/src/boot/java/net/caffeinemc/mods/sodium/client/compatibility/checks/: ModuleScanner.java
sodium-dev/common/src/boot/java/net/caffeinemc/mods/sodium/client/compatibility/environment/: GlContextInfo.java
sodium-dev/common/src/boot/java/net/caffeinemc/mods/sodium/client/console/: Console.java  ConsoleSink.java
sodium-dev/common/src/boot/java/net/caffeinemc/mods/sodium/client/platform/: PlatformHelper.java
sodium-dev/common/src/boot/java/net/caffeinemc/mods/sodium/client/platform/unix/: Libc.java
sodium-dev/common/src/boot/java/net/caffeinemc/mods/sodium/client/platform/windows/: WindowsFileVersion.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/checks/: ResourcePackScanner.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/config/builder/: ConfigBuilderImpl.java  ExternalPageBuilderImpl.java  OptionPageBuilderImpl.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/config/structure/: OptionOverlay.java  OptionOverride.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/config/value/: DependentValue.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/data/fingerprint/: FingerprintMeasure.java  HashedFingerprint.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/gl/buffer/: GlBufferStreamer.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/gl/device/: CommandList.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/gui/: ColorTheme.java  SodiumDebugEntry.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/services/: PlatformLevelAccess.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/util/: Dim2i.java  FogParameters.java  FogStorage.java  MathUtil.java  SodiumChunkSection.java
sodium-dev/common/src/main/java/net/caffeinemc/mods/sodium/client/world/: LevelRendererExtension.java
sodium-dev/fabric/src/main/java/net/caffeinemc/mods/sodium/fabric/level/: FabricLevelAccess.java
sodium-dev/frapi/src/main/java/net/caffeinemc/mods/sodium/mixin/frapi/: ItemRenderStateMixin.java  ItemRendererAccessor.java  ModelBlockRendererMixin.java  MutableQuadViewImplMixin.java  QuadViewImplMixin.java
sodium-dev/neoforge/.eclipse/configurations/NeoForge/: Client.launch
sodium-dev/neoforge/src/mod/java/net/caffeinemc/mods/sodium/neoforge/: ForgeMixinOverrides.java  NeoForgeRuntimeInformation.java
sodium-dev/neoforge/src/mod/java/net/caffeinemc/mods/sodium/neoforge/level/: NeoForgeLevelAccess.java
(+112 files in other folders)
